--- a/example/tutorial.ipynb
+++ b/example/tutorial.ipynb
@@ -2,28 +2,56 @@
     "cells" : [
         {
             "cell_type" : "code",
-            "execution_count" : 6,
+            "execution_count" : 1,
             "metadata" : {},
             "outputs" : [],
             "source" :
-                [ "from pySEOBNREPHM.waveform import calculate_waveform_ep\n", "import matplotlib.pyplot as plt" ]
+                [ "from pySEOBNREPHM.waveform import calculate_waveform_ep \n", "import matplotlib.pyplot as plt" ]
         },
         {
             "cell_type" : "code",
-            "execution_count" : 5,
+            "execution_count" : 2,
             "metadata" : {},
             "outputs" : [],
             "source" : [
-                "m1 = m2 = 10\n", "chi1x = 0.2\n", "chi1y = chi1z = 0\n", "chi2y = -0.3\n", "chi2x = chi2z = 0\n",
-                "e0 = 0.2\n", "dL = 100\n", "zeta_rad = 0\n", "iota_rad = beta_rad = Phic_rad = 0\n", "fMin = 20\n",
-                "Mf_ref = 0.003\n", "waveform, dynamics = calculate_waveform_ep((m1, m2, \n",
-                "\tchi1x, chi1y, chi1z, \n", "\tchi2x, chi2y, chi2z, \n", "\te0, dL, \n", "\tzeta_rad, iota_rad, \n",
-                "  beta_rad, Phic_rad), fMin, Mf_ref = Mf_ref, srate=16384, is_coframe=False)"
+                "m1 = m2 = 10\n",
+                "chi1x = 0.2\n",
+                "chi1y = chi1z = 0\n",
+                "chi2y = -0.3\n",
+                "chi2x = chi2z = 0\n",
+                "e0 = 0.2\n",
+                "dL = 100\n",
+                "zeta_rad = 0\n",
+                "iota_rad = beta_rad = Phic_rad = 0\n",
+                "fMin = 20\n",
+                "Mf_ref = 0.003\n",
+                "waveform, dynamics = calculate_waveform_ep(\n",
+                "    (\n",
+                "        m1,\n",
+                "        m2,\n",
+                "        chi1x,\n",
+                "        chi1y,\n",
+                "        chi1z,\n",
+                "        chi2x,\n",
+                "        chi2y,\n",
+                "        chi2z,\n",
+                "        e0,\n",
+                "        dL,\n",
+                "        zeta_rad,\n",
+                "        iota_rad,\n",
+                "        beta_rad,\n",
+                "        Phic_rad,\n",
+                "    ),\n",
+                "    fMin,\n",
+                "    Mf_ref=Mf_ref,\n",
+                "    srate=16384,\n",
+                "    is_coframe=False,\n",
+                ")"
             ]
         },
         {
             "cell_type" : "code",
-            "execution_count" : 7,
+            "execution_count" : 3,
             "metadata" : {},
             "outputs" : [ {
                 "data" : {
